src/styles/TripListPage.css
.cardHeader {
  font-family: "Pacifico", cursive;
  font-size: 25px;
  letter-spacing: 0.03em;
  background-color: rgb(181, 235, 235);
  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
    0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
    0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
    0 100px 80px rgba(0, 0, 0, 0.07);
}

#tripTable {
  width: 100vw;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.container {
  margin: 0;
}

